--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
             <h3 id="temp" class="text-3xl font-bold">~ °C</h3>
             <!-- parameters -->
             <div class="flex flex-wrap gap-5 justify-center items-center">
-              <div class="backdrop-blur-sm bg-blue-100/1 p-3 w-30 border-white/20 border-b border-r shadow-lg rounded flex flex-col items-center [transform-style:preserve-3d] [transform:translateZ(50px)]"data-tilt data-tilt-glare data-tilt-max-glare="0.2" data-tilt-reverse="true" data-tilt-max="20" data-tilt-speed="300">
+              <div class="backdrop-blur-sm bg-blue-100/1 p-3 w-30 border-white/20 border-b border-r shadow-lg rounded flex flex-col items-center [transform-style:preserve-3d] [transform:translateZ(50px)]" data-tilt data-tilt-glare data-tilt-max-glare="0.2" data-tilt-reverse="true" data-tilt-max="20" data-tilt-speed="300">
                 <img src="src/assets/wind.png" alt="windSpeed" class="h-15">
                 <h3>WINDSPEED</h3>
                 <h4 class="select-text" id="wind">~</h4>
               </div>
-              <div class="backdrop-blur-sm bg-blue-100/1 p-3 w-30 border-white/20 border-b border-r shadow-lg rounded flex flex-col items-center [transform-style:preserve-3d] [transform:translateZ(50px)]"data-tilt data-tilt-glare data-tilt-max-glare="0.2" data-tilt-reverse="true" data-tilt-max="20" data-tilt-speed="300">
+              <div class="backdrop-blur-sm bg-blue-100/1 p-3 w-30 border-white/20 border-b border-r shadow-lg rounded flex flex-col items-center [transform-style:preserve-3d] [transform:translateZ(50px)]" data-tilt data-tilt-glare data-tilt-max-glare="0.2" data-tilt-reverse="true" data-tilt-max="20" data-tilt-speed="300">
                 <img src="src/assets/humidity.png" alt="Humidity" class="h-15">
                 <h3>HUMIDITY</h3>
                 <h4 class="select-text" id="humidity">~</h4>
               </div>
-              <div class="backdrop-blur-sm bg-blue-100/1 p-3 w-30 border-white/20 border-b border-r shadow-lg rounded flex flex-col items-center [transform-style:preserve-3d] [transform:translateZ(50px)]"data-tilt data-tilt-glare data-tilt-max-glare="0.2" data-tilt-reverse="true" data-tilt-max="20" data-tilt-speed="300">
+              <div class="backdrop-blur-sm bg-blue-100/1 p-3 w-30 border-white/20 border-b border-r shadow-lg rounded flex flex-col items-center [transform-style:preserve-3d] [transform:translateZ(50px)]" data-tilt data-tilt-glare data-tilt-max-glare="0.2" data-tilt-reverse="true" data-tilt-max="20" data-tilt-speed="300">
                 <img src="src/assets/cloud.png" alt="Rain" class="h-15">
                 <h3 >RAIN</h3>
                 <h4 class="select-text" id="rain">~</h4>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </section>
-    <script src="src/weather.js"></script>
+    <script src="src/weather.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.1/vanilla-tilt.min.js"></script>
   </body>
 </html>
